Fix mapping tests for target mappings