@@ -1,6 +1,7 @@
 package com.interlis.transform.engine;
 
 import ch.interlis.iom.IomObject;
+import com.interlis.transform.RoleResolver;
 import com.interlis.transform.TransformationContext;
 import com.interlis.transform.emit.TargetEmitter;
 import com.interlis.transform.expression.ExpressionEngine;
@@ -19,23 +20,39 @@ public final class DefaultTransformationContext implements TransformationContext
     private final ExpressionEngine expressionEngine;
     private final StateStore stateStore;
     private final Logger logger;
+    private final String basketId;
+    private final RoleResolver roleResolver;
     private IomObject target;
     private boolean skip;
 
     public DefaultTransformationContext(
             Map<String, IomObject> sources,
             String primaryAlias,
+            String basketId,
+            TargetEmitter emitter,
+            ExpressionEngine expressionEngine,
+            StateStore stateStore,
+            Logger logger,
+            RoleResolver roleResolver
+    ) {
+        this.sources = Collections.unmodifiableMap(new HashMap<>(Objects.requireNonNull(sources, "sources")));
+        this.primaryAlias = Objects.requireNonNull(primaryAlias, "primaryAlias");
+        this.basketId = basketId;
+        this.emitter = Objects.requireNonNull(emitter, "emitter");
+        this.expressionEngine = Objects.requireNonNull(expressionEngine, "expressionEngine");
+        this.stateStore = Objects.requireNonNull(stateStore, "stateStore");
+        this.logger = Objects.requireNonNull(logger, "logger");
+        this.roleResolver = Objects.requireNonNull(roleResolver, "roleResolver");
+    }
+
+    public DefaultTransformationContext(
+            IomObject source,
             TargetEmitter emitter,
             ExpressionEngine expressionEngine,
             StateStore stateStore,
             Logger logger
     ) {
-        this.sources = Collections.unmodifiableMap(new HashMap<>(Objects.requireNonNull(sources, "sources")));
-        this.primaryAlias = Objects.requireNonNull(primaryAlias, "primaryAlias");
-        this.emitter = Objects.requireNonNull(emitter, "emitter");
-        this.expressionEngine = Objects.requireNonNull(expressionEngine, "expressionEngine");
-        this.stateStore = Objects.requireNonNull(stateStore, "stateStore");
-        this.logger = Objects.requireNonNull(logger, "logger");
+        this(Map.of("src", source), "src", null, emitter, expressionEngine, stateStore, logger, RoleResolver.NONE);
     }
 
     @Override
@@ -84,6 +101,16 @@ public final class DefaultTransformationContext implements TransformationContext
     @Override
     public Logger log() {
         return logger;
+    }
+
+    @Override
+    public Optional<String> basketId() {
+        return Optional.ofNullable(basketId);
+    }
+
+    @Override
+    public RoleResolver roleResolver() {
+        return roleResolver;
     }
 
     @Override
